# AdventOfCode-2022

./: Cargo.toml  bacon.toml
benches/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  1.rs  2.rs  2015.rs  2016.rs  2017.rs  2018.rs  2019.rs  2020.rs  2021.rs  2022.rs  3.rs  4.rs  5.rs  6.rs  all.rs
examples/: 1.rs
src/: lib.rs  main.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day06/: mod.rs
src/day1/: mod.rs
src/day17/: mod.rs
src/day2/: mod.rs
src/day21/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
src/y2015/day01/: mod.rs
src/y2015/day11/: mod.rs
src/y2015/day15/: mod.rs
src/y2015/day16/: mod.rs
src/y2015/day22/: mod.rs
src/y2015/day23/: mod.rs
src/y2015/day24/: mod.rs
src/y2016/: mod.rs
src/y2016/day01/: mod.rs
src/y2016/day12/: mod.rs
src/y2016/day14/: mod.rs
src/y2016/day25/: mod.rs
src/y2017/day03/: mod.rs
src/y2017/day04/: mod.rs
src/y2017/day05/: mod.rs
src/y2017/day13/: mod.rs
src/y2018/day06/: mod.rs
src/y2018/day18/: mod.rs
src/y2020/day07/: mod.rs
src/y2020/day09/: mod.rs
src/y2020/day19/: mod.rs
src/y2021/day02/: mod.rs
src/y2021/day08/: mod.rs
src/y2021/day20/: mod.rs
src/y2022/day05/: mod.rs
src/y2022/day10/: mod.rs
