[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
nom = "7.1.3"
itertools = "0.10.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "01"
harness = false

[[bench]]
name = "02"
harness = false

[[bench]]
name = "03"
harness = false

[[bench]]
name = "04"
harness = false

[[bench]]
name = "05"
harness = false

[[bench]]
name = "06"
harness = false
