[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
nom = "7.1.3"
itertools = "0.10.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "2022"
harness = false

[[bench]]
name = "2021"
harness = false

[[bench]]
name = "2020"
harness = false

[[bench]]
name = "2019"
harness = false

[[bench]]
name = "2018"
harness = false

[[bench]]
name = "2017"
harness = false

[[bench]]
name = "2016"
harness = false

[[bench]]
name = "2015"
harness = false
